--- a/public/fonts/vve-giallo-regular-demo.html
+++ b/public/fonts/vve-giallo-regular-demo.html
@@ -61,7 +61,7 @@
 
     <style type="text/css">
         		body {
-			font-family: 'vve-giallo-regulauploadedfile';
+			font-family: 'Euclid Circular';
         		}
 
             </style>
