--- a/public/fonts/vve-giallo-regular-demo.html
+++ b/public/fonts/vve-giallo-regular-demo.html
@@ -61,7 +61,7 @@
 
     <style type="text/css">
         		body {
-			font-family: 'Euclid Circular';
+			 font-family: 'Metropolis', Arial, Helvetica, sans-serif !important;
         		}
 
             </style>
